# Soundex

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
src/: CMakeLists.txt  CharUtil.cpp  CharUtil.h  Soundex.cpp  Soundex.h  StringUtil.cpp  StringUtil.h
test/: CMakeLists.txt  CharUtilTest.cpp  SoundexTest.cpp  StringUtilTest.cpp
